Created file structure for Batch and Log list,detail, and edit fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Must Watch</string>
+    <string name="save_batch">Save Batch</string>
+    <string name="add_log_entry">Add Log Entry</string>
+    <string name="edit_batch_title">Editing Batch #%d</string>
+    <string name="create_batch_title">Create a new Batch</string>
 </resources>
