Fixed issue with units not being paired in the Batch Edit form

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- ================================================================
                             UNITS
     ================================================================= -->
+    <string name="UNKNOWN_UNIT">-</string>
     <string name="DEGREES_C">°C</string>
     <string name="DEGREES_F">°F</string>
 
