Improved/fixed display of the BatchIngredients as they appear in the Detail and Edit views.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,5 +156,6 @@
                             STABILIZER
     ================================================================= -->
     <string name="CAMPDEN">Campden</string>
+    <string name="no_ingredient">-</string>
 
 </resources>
