Update to SDK 28, fixed DrawerLayout with Jetpack
Still a WIP; most things don't work right now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,5 +157,7 @@
     ================================================================= -->
     <string name="CAMPDEN">Campden</string>
     <string name="no_ingredient">-</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 
 </resources>
