--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,9 +36,8 @@
     <string name="LITER">L</string>
     <string name="GALLON_LIQUID_US">gal (US)</string>
     <string name="GALLON_DRY_US">dry gal (US)</string>
-    <string name="OUNCE_LIQUID_US">fl oz (US)</string>
+    <string name="OUNCE_LIQUID_US">fl oz</string>
     <string name="GALLON_LIQUID_UK">gal (UK)</string>
-    <string name="OUNCE_LIQUID_UK">fl oz (UK)</string>
 
     <string name="KILOGRAM">kg</string>
     <string name="GRAM">g</string>
